--- a/react-app/src/components/SplashPage/splashPage.css
+++ b/react-app/src/components/SplashPage/splashPage.css
@@ -5,7 +5,6 @@
     right: 0;
     bottom: 0;
     z-index: 0;
-    max-height: 100vh;
+    height: 100vh;
     width: 100vw;
-    background-size: cover;
 }
