--- a/react-app/src/components/Navigation/navigation.css
+++ b/react-app/src/components/Navigation/navigation.css
@@ -5,6 +5,7 @@
     background-color: transparent;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 10px;
 }
 
 #first-fraction {
@@ -24,43 +25,103 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 2px;
 }
 
 #b {
-    font-size: 50px;
     color: white;
+    text-transform: uppercase;
+    font-size: 2.2rem;
+    letter-spacing: .2rem;
 }
 
-#loom {
-    color:#0f6eea;
-}
 
 #bloom-title {
     border-bottom: 2px solid white;
-    font-size: 35px;
     text-decoration: none;
 }
 
-#getStarted-button {
-    font-size: 30px;
-    color: #0f6eea;
+#loom,
+.link,
+.btn {
+    font-size: 1.6rem;
     text-decoration: none;
-    margin-top: 10px;
-    border: 1px solid white;
-    background-color: transparent;
-    box-shadow: 2px 2px 5px grey;
-    padding: 5px 10px 5px 10px;
+    letter-spacing: .3rem;
+	text-transform: uppercase;
 }
 
+#loom,
 .link {
-    font-size: 30px;
-    color: #0f6eea;
-    text-decoration: none;
+    color:#0f6eea;
+
 }
 
 #loom:hover,
-#getStarted-button:hover,
 .link:hover {
     color: #6289bd;
+}
+
+/* button styling */
+
+.btn {
+	position: relative;
+	padding: .5rem 2.2rem;
+	padding-right: 2.2rem;
+    color:#0f6eea;
+	transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);
+	cursor: pointer;
+	user-select: none;
+    z-index: 1;
+    border: none;
+    background-color: transparent;
+}
+
+.btn:before, .btn:after {
+	content: '';
+	position: absolute;
+	transition: inherit;
+	z-index: -1;
+}
+
+.btn:hover {
+    color: #6289bd;
+	transition-delay: .5s;
+}
+
+.btn:hover:before {
+	transition-delay: 0s;
+}
+
+.btn:hover:after {
+	background: rgba(255, 255, 255, .4);
+	transition-delay: .35s;
+}
+
+/* From Top */
+
+.from-top:before,
+.from-top:after {
+	left: 0;
+	height: 0;
+	width: 100%;
+}
+
+.from-top:before {
+	bottom: 0;
+	border: 2px solid white;
+	border-top: 0;
+	border-bottom: 0;
+}
+
+.from-top:after {
+	top: 0;
+	height: 0;
+}
+
+.from-top:hover:before,
+.from-top:hover:after {
+	height: 100%;
+}
+
+*, *:before, *:after {
+	box-sizing: border-box;
 }
