--- a/react-app/src/components/SplashPage/splashPage.css
+++ b/react-app/src/components/SplashPage/splashPage.css
@@ -8,3 +8,18 @@
     height: 100vh;
     width: 100vw;
 }
+
+#page-container {
+    position: relative;
+    top: 20vh;
+    left: 7vw;
+    width: 1000px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#slogan-header {
+    font-size: 50px;
+    color: white;
+}
