--- a/react-app/src/components/UserHub/userHub.css
+++ b/react-app/src/components/UserHub/userHub.css
@@ -4,21 +4,5 @@
     width: 100%;
     display: flex;
     align-items: center;
-}
-
-#hub-sidebar {
-    display: flex;
-    flex-direction: column;
-    margin-left: 50px;
-}
-
-.hub-button {
-    width: 250px;
-    height: 50px;
-    background-color: transparent;
-    margin: 5px 0;
-    font-size: 1.6rem;
-    letter-spacing: .3rem;
-	text-transform: uppercase;
-    color:#0f6eea;
+    justify-content: center;
 }
