--- a/react-app/src/components/AuthForms/authForms.css
+++ b/react-app/src/components/AuthForms/authForms.css
@@ -7,8 +7,10 @@
 #hub-sidebar {
     display: flex;
     flex-direction: column;
-    background-color: #d4cdb2;
+    align-items: center;
+    background-color: #d9e2da;
     height: 550px;
+    border: 10px solid white;
 }
 
 .hub-button {
@@ -25,4 +27,10 @@
 
 .hub-button:hover {
     color: #6289bd;
+}
+
+.auth-icon {
+    margin-top: 55px;
+    height: 200px;
+    width: 200px;
 }
