--- a/react-app/src/components/AuthForms/authForms.css
+++ b/react-app/src/components/AuthForms/authForms.css
@@ -3,6 +3,8 @@
     height: 550px;
     width: 500px;
     box-shadow: 4px 4px 3px rgba(0, 0, 0, .1);
+    display: flex;
+    justify-content: center;
 }
 
 #hub-sidebar {
@@ -35,15 +37,11 @@
     text-decoration: underline 2px solid #e9f3ea;;
 }
 
-.auth-icon {
-    margin-top: 65px;
-    height: 150px;
-    width: 150px;
-}
 
 #selected {
     background-color: #e9f3ea;
     color:#0f6eea;
+    /* possibly black */
 }
 
 #spacer {
