--- a/react-app/src/components/AuthForms/authForms.css
+++ b/react-app/src/components/AuthForms/authForms.css
@@ -1,5 +1,5 @@
 .form-background {
-    background-color: #e9f3ea;
+    background-color: #f1f7f1;
     height: 550px;
     width: 500px;
     box-shadow: 4px 4px 3px rgba(0, 0, 0, .1);
@@ -14,7 +14,7 @@
     /* background-color: #d9e2da; */
     background-color: rgba(0, 0, 0, .2);
     height: 550px;
-    border: 8px solid #e9f3ea;
+    border: 8px solid #f1f7f1;
     box-shadow: 4px 4px 3px rgba(0, 0, 0, .1);
 }
 
@@ -39,8 +39,8 @@
 
 
 #selected {
-    background-color: #e9f3ea;
-    color:#0f6eea;
+    background-color: #f1f7f1;
+    color:rgba(0, 0, 0, .5)
     /* possibly black */
 }
 
