--- a/react-app/src/components/Navigation/navigation.css
+++ b/react-app/src/components/Navigation/navigation.css
@@ -131,8 +131,9 @@
 
 
 .translate {
-    animation: translate 4s ;
+    animation: translate 5s ;
     animation-fill-mode: forwards;
+    animation-delay: .7s;
 
 }
 
@@ -140,8 +141,12 @@
     0% {
       transform: translate(0, 0);
     }
+    75% {
+        color:#0f6eea;
+    }
     100% {
       transform: translate(0, 420px);
       color:#0f6eea;
     }
+
   }
