--- a/react-app/src/components/AuthForms/LoginForm/loginForm.css
+++ b/react-app/src/components/AuthForms/LoginForm/loginForm.css
@@ -26,31 +26,36 @@
 }
 
 .not-ready {
-    text-transform: uppercase;
     height: 50px;
     width: 200px;
     cursor: not-allowed;
     border: transparent;
     outline: none;
     background-color:transparent;
-    font-size: 30px;
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    letter-spacing: .2rem;
     color: rgba(0, 0, 0, .5);
     margin-top: 60px;;
 }
 
 .ready {
-    text-transform: uppercase;
     height: 50px;
     width: 200px;
     border: none;
     outline: none;
-    font-size: 30px;
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    letter-spacing: .2rem;
     color: white;
     background-color: rgba(0, 0, 0, .8);
     box-shadow: 4px 4px 3px rgba(0, 0, 0, .1);
-    margin-top: 80px;
+    margin-top: 60px;
+    transition: all 0.25s ease-in 0s;
+
 }
 
 .ready:hover {
-    color: rgba(0, 0, 0, .8);
+    text-decoration: underline 2px solid white;
+    cursor: pointer;
 }
