--- a/react-app/src/components/SplashPage/splashPage.css
+++ b/react-app/src/components/SplashPage/splashPage.css
@@ -11,15 +11,23 @@
 
 #page-container {
     position: relative;
-    top: 20vh;
-    left: 7vw;
-    width: 1000px;
+    top: 30vh;
+    left: 50px;
+    width: 600px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
 }
 
 #slogan-header {
     font-size: 50px;
     color: white;
+}
+
+.get-started {
+    margin-top: 20px;
+    width: 300px;
+    display: flex;
+
 }
