--- a/react-app/src/components/Templates/templates.css
+++ b/react-app/src/components/Templates/templates.css
@@ -5,12 +5,13 @@
 }
 
 .template-header {
-    color: white;
+    color: rgba(0, 0, 0, .7);
     display: flex;
     justify-content: center;
-    padding-top: 120px;
+    text-transform: uppercase;
+    padding-top: 130px;
     padding-bottom: 60px;
-    font-size: 2.1rem;
+    font-size: 2rem;
     letter-spacing: .1rem;
 }
 
@@ -30,11 +31,11 @@
 }
 
 .image-description {
-    font-size: 30px;
-    transform: translateX(-1750px);
-    color: white;
+    display: flex;
+    transform: translateX(-2100px);
+    color: rgba(0, 0, 0, .7);
     text-transform: uppercase;
-    font-size: 2.2rem;
+    font-size: 2rem;
     letter-spacing: .2rem;
 }
 
