--- a/react-app/src/components/Navigation/navigation.css
+++ b/react-app/src/components/Navigation/navigation.css
@@ -1,5 +1,6 @@
 #grid-container {
     width: 100vw;
+    position: absolute;
     z-index: 1;
     background-color: rgba(255, 255, 255, .3);
     display: grid;
