--- a/react-app/src/components/AuthForms/authForms.css
+++ b/react-app/src/components/AuthForms/authForms.css
@@ -83,7 +83,8 @@
     text-transform: uppercase;
     font-size: 1.8rem;
     letter-spacing: .2rem;
-    color: rgba(0, 0, 0, .7);
+    color: rgba(0, 0, 0, .2);
+    background-color: rgba(0, 0, 0, .1);
     margin-top: 15px;
 }
 
