--- a/react-app/src/components/Layouts/Horizontal/horizontal.css
+++ b/react-app/src/components/Layouts/Horizontal/horizontal.css
@@ -3,17 +3,17 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    margin-top: 75px;
+    margin-top: 25px;
 
 }
 
 .horizontal-tabs {
     height: 50px;
-    width: 30vw;
+    width: 40vw;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 75px;
+    margin-bottom: 50px;
 }
 
 .horizontal-button {
@@ -26,10 +26,52 @@
 }
 
 .horizontal-card {
-    background-color: rgba(255, 255, 255, .8);
-    height: 600px;
-    width: 600px;
+    background-color: rgb(245, 244, 244);
+    height: 750px;
+    width: 700px;
     box-shadow: 4px 4px 3px rgba(0, 0, 0, .1);
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+.profile-image {
+    height: 300px;
+    width: 300px;
+    margin: 20px 0;
+    border-radius: 50%;
+}
+
+#underline {
+    border-bottom: 2px solid #5b6c34;;
+
+}
+.top-half {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: 2px solid #5b6c34;;
+}
+
+.couple-names {
+    color: #5b6c34;
+    text-transform: uppercase;
+    font-size: 3rem;
+    letter-spacing: .1rem;
+}
+
+.vertical-line {
+    height: 100px;
+    border-left: 2px solid #5b6c34;;
+}
+
+.invitation {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-top:20px;
+    padding-bottom: 20px;
+    font-size: 30px;
+    font-family:Georgia, 'Times New Roman', Times, serif
 }
