--- a/react-app/src/components/Templates/templates.css
+++ b/react-app/src/components/Templates/templates.css
@@ -5,12 +5,12 @@
 }
 
 .template-header {
-    color: rgba(0, 0, 0, .7);
+    color: rgba(0, 0, 0, .5);
     display: flex;
     justify-content: center;
-    text-transform: uppercase;
-    padding-top: 130px;
-    padding-bottom: 60px;
+    margin-right: 330px;
+    padding-top: 150px;
+    padding-bottom: 30px;
     font-size: 2rem;
     letter-spacing: .1rem;
 }
@@ -23,20 +23,28 @@
 
 .template-image {
     margin-left: 200px;
-    height: 600px;
-    width: 1100px;
-    border-radius: 50px;
-    box-shadow: 4px 4px 3px rgba(0, 0, 0, .1);
-    transform: translateX(-2400px);
+    height: 500px;
+    width: 900px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 4px rgba(0, 0, 0, .2);
+    transform: translateX(-1890px);
 }
 
 .image-description {
-    display: flex;
-    transform: translateX(-2100px);
+    position: relative;
+    top: 500px;
+    transform: translateX(-1610px);
     color: rgba(0, 0, 0, .7);
     text-transform: uppercase;
     font-size: 2rem;
     letter-spacing: .2rem;
+    z-index: 1;
+    width: fit-content;
+    background-color: rgba(255, 255, 255, .5);
+    border-top: 2px solid white;
+    border-left: 2px solid white;
+    border-right: 2px solid white;
+    padding: 10px 10px 5px 10px;
 }
 
 #center{
@@ -70,8 +78,8 @@
 
 .left-arrow {
     position: absolute;
-    top: 52vh;
-    left: 14.5vw;
+    top: 50vh;
+    left: 20.3vw;
     height: 50px;
     width: 30px;
     background-color: transparent;
@@ -87,9 +95,11 @@
 }
 
 .right-arrow {
+    margin: 0;
+    padding:0;
     position: absolute;
-    top: 52vh;
-    right: 16vw;
+    top: 50vh;
+    right: 20.5vw;
     height: 50px;
     width: 30px;
     background-color: transparent;
