--- a/react-app/src/components/AuthForms/authForms.css
+++ b/react-app/src/components/AuthForms/authForms.css
@@ -5,6 +5,7 @@
     box-shadow: 4px 4px 3px rgba(0, 0, 0, .1);
     display: flex;
     justify-content: center;
+    transition: all 5s ease-out;
 }
 
 #hub-sidebar {
@@ -17,38 +18,39 @@
     box-shadow: 4px 4px 3px rgba(0, 0, 0, .1);
 }
 
-#hub-button {
+.hub-button {
     width: 250px;
     height: 80px;
-    background-color: transparent;
-    border: transparent;
-    margin: 5px 0;
+    margin:5px 0;
     font-size: 1.6rem;
     letter-spacing: .3rem;
 	text-transform: uppercase;
-    color:white;
+    cursor: pointer;
     outline: none;
-    transition: all .4s ease-in;
-    cursor: pointer;
-
+    border: transparent;
+    background-color: transparent;
+    color:white;
+    transition: .2s ease-in-out;
 }
 
-#selected {
-    height:80px;
+.selected {
+    width: 250px;
+    height: 80px;
+    margin:5px 0;
     font-size: 1.6rem;
     letter-spacing: .3rem;
 	text-transform: uppercase;
-    background-color: rgba(255, 255, 255, .5);
-    border: transparent;
-    color:rgba(0, 0, 0, .5);
-    transition: all .4s ease-in;
     cursor: pointer;
-
+    outline: none;
+    border: transparent;
+    background-color: rgba(255,255,255, .5);
+    color:rgba(0, 0, 0, .4);
+    transition: all .2s ease-in;
 }
-
 
 .auth-form {
     display: flex;
+
 }
 
 .auth-header {
@@ -118,6 +120,7 @@
     text-transform: uppercase;
     letter-spacing: .1rem;
 }
+
 
 .auth-errors-login {
     position: absolute;
