--- a/react-app/src/components/Layouts/Vertical/horizontal.css
+++ b/react-app/src/components/Layouts/Vertical/horizontal.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 50px;
+    margin-top: 50px;
 }
 
 .horizontal-button {
@@ -26,19 +26,20 @@
 }
 
 .horizontal-card {
-    background-color: rgb(245, 244, 244);
-    height: 750px;
-    width: 700px;
+    background-color: rgb(254, 255, 238);
+    height: 700px;
+    width: 650px;
     box-shadow: 4px 4px 3px rgba(0, 0, 0, .1);
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-top: 50px;
 
 }
 
 .profile-image {
-    height: 300px;
-    width: 300px;
+    height: 250px;
+    width: 250px;
     margin: 20px 0;
     border-radius: 50%;
 }
@@ -55,23 +56,24 @@
 }
 
 .couple-names {
-    color: #5b6c34;
+    color: #a5943f;
     text-transform: uppercase;
-    font-size: 3rem;
+    font-size: 2.3rem;
     letter-spacing: .1rem;
 }
 
 .vertical-line {
+    margin-top: 20px;
     height: 100px;
-    border-left: 2px solid #5b6c34;;
+    border-left: 2px solid #a5943f;
 }
 
 .invitation {
     display: flex;
     align-items: center;
     text-align: center;
-    padding-top:20px;
+    padding-top:30px;
     padding-bottom: 20px;
     font-size: 30px;
-    font-family:Georgia, 'Times New Roman', Times, serif
+    color: #5b6c34;
 }
