--- a/react-app/src/components/Templates/templates.css
+++ b/react-app/src/components/Templates/templates.css
@@ -2,52 +2,69 @@
     background-color: #e8ece8;
     width: 100%;
     overflow-x: hidden;
-    padding-top: 70px;
     display: flex;
     flex-direction: column;
 }
 
-.description-holder {
+.templates-header {
+    color: rgba(0, 0, 0, .6);
+    font-size: 35px;
     display: flex;
+    padding-top: 150px;
     align-items: center;
-    justify-content: space-evenly;
-    width: 100vw;
-    padding: 100px 0;
-}
-
-.description-header {
-    color: rgba(0, 0, 0, .6);
-    display: flex;
-    width: 15vw;
-    font-size: 50px;
-    text-align: justify;
-}
-
-.templates-description {
-    color: rgba(0, 0, 0, .6);
-    display: flex;
-    width: 40vw;
-    font-size: 30px;
-    text-align: justify;
-}
-
-.template-image {
-    height: 400px;
-    width: 500px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 4px rgba(0, 0, 0, .2);
+    justify-content: center;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
 }
 
 .image-description {
+    position: absolute;
+    top:58.5vh;
+    left: 0;
     color: #0f6eea;
     text-transform: uppercase;
     font-size: 2rem;
     letter-spacing: .2rem;
     z-index: 1;
     width: fit-content;
+    height: fit-content;
     background-color: rgba(255, 255, 255, .6);
-    border-top: 3px solid white;
-    border-left: 3px solid white;
-    border-right: 3px solid white;
+    border: 3px solid white;
     padding: 10px 10px 5px 10px;
+}
+
+.carousel-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.carousel-root {
+width: fit-content;
+box-shadow: 5px 5px 4px rgba(0, 0, 0, .2);
+}
+
+.carousel.carousel-slider .control-arrow {
+padding: 20px;
+margin-top: 250px;
+height: 100px;
+background-color: rgba(0, 0, 0, .5);
+}
+
+.templates-description {
+    width: 15vw;
+    font-size: 35px;
+    color: rgba(0, 0, 0, .6);
+}
+
+.background-images-container {
+    padding: 100px 0;
+}
+
+.templates-image {
+    height: 600px;
+}
+
+.spacer{
+    height: 200px;
 }
