--- a/react-app/src/components/Templates/templates.css
+++ b/react-app/src/components/Templates/templates.css
@@ -1,9 +1,19 @@
 .template-layout {
-    background-color: #e8ece8;
+    background-color: #e7e7e7;
     width: 100%;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
+}
+
+section {
+    padding: 90px 0;
+}
+
+#section-2 {
+    height: 70vh;
+    padding-top: 140px;
+    background-color: #f6fbf3;
 }
 
 .templates-header {
@@ -29,7 +39,8 @@
     width: fit-content;
     height: fit-content;
     background-color: rgba(255, 255, 255, .6);
-    border: 3px solid white;
+    border-top: 3px solid white;
+    border-right: 3px solid white;
     padding: 10px 10px 5px 10px;
 }
 
@@ -40,15 +51,15 @@
 }
 
 .carousel-root {
-width: fit-content;
-box-shadow: 5px 5px 4px rgba(0, 0, 0, .2);
+    width: fit-content;
+    box-shadow: 5px 5px 4px rgba(0, 0, 0, .2);
 }
 
 .carousel.carousel-slider .control-arrow {
-padding: 20px;
-margin-top: 250px;
-height: 100px;
-background-color: rgba(0, 0, 0, .5);
+    padding: 20px;
+    margin-top: 250px;
+    height: 100px;
+    background-color: rgba(0, 0, 0, .5);
 }
 
 .templates-description {
@@ -57,14 +68,38 @@ background-color: rgba(0, 0, 0, .5);
     color: rgba(0, 0, 0, .6);
 }
 
-.background-images-container {
-    padding: 100px 0;
-}
 
 .templates-image {
     height: 600px;
 }
 
-.spacer{
-    height: 200px;
+.color-palette-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 70vh;
+    padding: 100px 0;
+}
+
+.template-description-horizontal {
+    font-size: 35px;
+    color: rgba(0, 0, 0, .6);
+    padding-bottom: 80px;
+}
+
+.palette-images {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    padding-bottom: 70px;
+}
+
+.color-palette-img {
+    height: 500px;
+    width: 700px;
+    box-shadow: 5px 5px 4px rgba(0, 0, 0, .2);
 }
