--- a/react-app/src/components/AuthForms/SignupForm/signupForm.css
+++ b/react-app/src/components/AuthForms/SignupForm/signupForm.css
@@ -1,6 +1,6 @@
-.auth-box {
+.auth-box-two{
     position: absolute;
-    top: 55%;
+    top: 47%;
     left: 56.5%;
     transform: translate(-50%, -50%);
     width: 270px;
@@ -8,8 +8,8 @@
     height: 400px;
 }
 
-.auth-box h4 {
-    margin: 0 0 40px 20px;
+.auth-box-two h4 {
+    margin: 0 0 30px 40px;
     padding: 0;
     font-size: 1.9rem;
     letter-spacing: .2rem;
@@ -18,9 +18,9 @@
     /* color: ; */
 }
 
-.auth-box input {
+.auth-box-two input {
     padding: 10px 10px;
-    margin-bottom: 35px;
+    margin-bottom: 25px;
     width: 100%;
     height: 60px;
     font-size: 25px;
@@ -33,16 +33,16 @@
 
 }
 
-.auth-box button {
+.auth-box-two button {
     border-bottom: none;
-    margin: 10px 0 0 30px;
+    margin: 0 0 0 30px;
 }
 
-.auth-box form div {
+.auth-box-two form div {
     position: relative;
 }
 
-.auth-box form div label {
+.auth-box-two form div label {
     position: absolute;
     top: 15px;
     left: 10px;
@@ -52,7 +52,7 @@
     color: rgba(0,0,0, .7);
 }
 
-.auth-box input:focus ~ label {
+.auth-box-two input:focus ~ label {
     top:-20px;
     left: 10px;
     font-weight: bold;
@@ -60,8 +60,8 @@
 
 }
 
-.auth-box input:focus ~label,
-.auth-box input:valid ~ label {
+.auth-box-two input:focus ~label,
+.auth-box-two input:valid ~ label {
     top:-20px;
     left:10px;
     font-weight: bold;
