--- a/react-app/src/components/AuthForms/authForms.css
+++ b/react-app/src/components/AuthForms/authForms.css
@@ -67,7 +67,7 @@
     font-size: 1.8rem;
     letter-spacing: .2rem;
     color: white;
-    background-color: rgba(0, 0, 0, .5);
+    background-color: #5e85b8;
     box-shadow: 4px 4px 3px rgba(0, 0, 0, .1);
     transition: all 0.25s ease-in 0s;
     margin-top: 15px;
